--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
   </head>
 
   <body>
+    <% flash.each do |type, message| %>
+      <div class="alert alert-<%= type %>" data-testid="flash">
+        <%= message %>
+      </div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
