[learning] changing landing page behavior

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -3,7 +3,7 @@
 <p style="color: green"><%= notice %></p>
 
 <h1>Teams</h1>
-
+<%= render "form", team: @new_team %>
 <div id="teams">
   <% @teams.each do |team| %>
     <%= render team %>
