[TDD] add url input field to landing page

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,3 +1,9 @@
 <h1>Add my basketball team</h1>
-<label for="team_name">Name</label>
-<input id="team_name" name="team[name]"></input>
+<div>
+  <label for="team_name">Name</label>
+  <input id="team_name" name="team[name]"></input>
+</div>
+<div>
+  <label for="team_url">Url</label>
+  <input id="team_url" name="team[url]" type="url"></input>
+</div>
