Use testid for finding page elements

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Add my basketball team</h1>
+<h1 data-testid="page-title">Add my basketball team</h1>
 
 <p style="color: green"><%= notice %></p>
 
