[TDD] added submit button to landing page

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -7,3 +7,4 @@
   <label for="team_url">Url</label>
   <input id="team_url" name="team[url]" type="url"></input>
 </div>
+<input type="submit" value="Add"/>
