[TDD] pending spec for a form on landing page

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,10 +1,12 @@
 <h1>Add my basketball team</h1>
-<div>
-  <label for="team_name">Name</label>
-  <input id="team_name" name="team[name]"></input>
-</div>
-<div>
-  <label for="team_url">Url</label>
-  <input id="team_url" name="team[url]" type="url"></input>
-</div>
-<input type="submit" value="Add"/>
+<form>
+  <div>
+    <label for="team_name">Name</label>
+    <input id="team_name" name="team[name]"></input>
+  </div>
+  <div>
+    <label for="team_url">Url</label>
+    <input id="team_url" name="team[url]" type="url"></input>
+  </div>
+  <input type="submit" value="Add"/>
+</form>
