--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,26 +1,71 @@
-<h1>Add my basketball team</h1>
-<%= form_with url: "/teams" do |form| %>
-  <div>
-    <%= form.label :team_name, :Name, style: "display: block" %>
-    <%= form.text_field :name, :id => 'team_name', :name => 'team[name]' %>
-  </div>
-  <div>
-  <%= form.label :team_url, :Url, style: "display: block" %>
-    <%= form.text_field :team_url, :id => 'team_url', :type => 'url', :name => 'team[url]' %>
-  </div>
 
-  <%= form.submit "Add" %>
-<% end %>
-<%= content_tag(:div, "text here!", id:"app", data:{ controller: "react"})%>
-<ul data-testid="teams-list">
-  <%# use safe nativgation &. below added so only call empty of teams exists %>
-  <% if @teams&.present? %>
-    <% @teams.each do |team| %>
-      <li data-testid="team">
-        <%= team.name %>
-      </li>
-    <% end %>
-  <% else %>
-    <p>add a team!</p>
-  <% end %>
-</ul>
+<div class="w-full lg:col-span-3">
+  <div class="p-8 lg:py-12 lg:px-10">
+    <div class="mb-8">
+      <h1 class="text-3xl font-bold underline">Add my basketball team</h1>
+    </div>
+    <%= form_with(model: @team, url: "/teams") do |form| %>
+    <div class="w-full max-w-sm">
+      <div class="md:flex md:items-center mb-6" data-testid="field-name">
+        <div class="md:w-1/3">
+            <%= form.label :team_name,
+            :Name,
+            class: "block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" %>
+        </div>
+        <div class="md:w-2/3">
+            <%= form.text_field :team_name,
+             :id => 'team_name',
+              :name => 'team[name]',
+               class:"bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" %>
+        </div>
+      </div>
+      <div class="md:flex md:items-center mb-6" data-testid="field-url">
+        <div class="md:w-1/3">
+          <%= form.label :team_url,
+            :Url,
+          class: "block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" %>
+        </div>
+        <div class="md:w-2/3">
+          <%= form.text_field :team_url,
+          # id: "team_url",
+          type: "url",
+          name: "team[url]",
+          class:"bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
+        %>
+        </div>
+      </div>
+      <div class="md:flex md:items-center">
+        <div class="md:w-1/3"></div>
+        <div class="md:w-2/3">
+          <%= form.submit "Add", class:"shadow bg-purple-500 hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" %>
+        </div>
+      </div>
+        <% end %>
+    </div>
+<div class="w-full mt-8">
+  <h2 class="text-2xl font-bold underline">List of teams</h2>
+  <div>
+    <%# use safe nativgation &. below added so only call empty of teams exists %>
+      <ul data-testid="teams-list">
+    <% if @teams&.present? %>
+      <% @teams.each do |team| %>
+        <div class="max-w-sm rounded overflow-hidden" data-testid="team" >
+          <div class="px-6 py-4">
+            <li class="font-bold text-xl mb-2 list-none" >
+              <%= team.name %>
+            </li>
+          </div>
+        </div>
+      </ul>
+      <% end %>
+      <% else %>
+      <p>add a team!</p>
+      <% end %>
+  </div>
+</div>
+<div class="w-full">
+  <div class="bg-pink-50>
+    <h3 class ="text-bold bg-pink-300">React Count component to delete and tailwind component fix </h3>
+    <%= content_tag(:div, "text here!", id:"app", data:{ controller: "react"}) %>
+  </div>
+</div>
