--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -8,28 +8,22 @@
     <div class="w-full max-w-sm">
       <div class="md:flex md:items-center mb-6" data-testid="field-name">
         <div class="md:w-1/3">
-            <%= form.label :team_name,
-            :Name,
+            <%= form.label :name,
             class: "block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" %>
         </div>
         <div class="md:w-2/3">
-            <%= form.text_field :team_name,
-             :id => 'team_name',
-              :name => 'team[name]',
+            <%= form.text_field :name,
                class:"bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" %>
         </div>
       </div>
       <div class="md:flex md:items-center mb-6" data-testid="field-url">
         <div class="md:w-1/3">
-          <%= form.label :team_url,
-            :Url,
+          <%= form.label :url,
           class: "block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" %>
         </div>
         <div class="md:w-2/3">
-          <%= form.text_field :team_url,
-          # id: "team_url",
+          <%= form.text_field :url,
           type: "url",
-          name: "team[url]",
           class:"bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
         %>
         </div>
