--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -27,7 +27,14 @@
           class:"bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
         %>
         </div>
+        <div
+          data-controller="react"
+          data-value="<%= @team.url %>"
+          data-path="<%= is_url_unique_teams_path %>"
+          data-component="input"
+        />
       </div>
+
       <div class="md:flex md:items-center">
         <div class="md:w-1/3"></div>
         <div class="md:w-2/3">
