--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,43 +1,41 @@
 
-<div class="w-full lg:col-span-3">
-  <div class="p-8 lg:py-12 lg:px-10">
+<div class="w-full">
+  <div class="p-8">
     <div class="mb-8">
       <h1 class="text-3xl font-bold underline">Add my basketball team</h1>
     </div>
     <%= form_with(model: @team, url: "/teams") do |form| %>
     <div class="w-full max-w-sm">
-      <div class="md:flex md:items-center mb-6" data-testid="field-name">
-        <div class="md:w-1/3">
+      <div class="mb-6" data-testid="field-name">
+        <div class="">
             <%= form.label :name,
-            class: "block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" %>
+            class: "block text-gray-500 font-bold mb-1 pr-4" %>
         </div>
-        <div class="md:w-2/3">
+        <div class="">
             <%= form.text_field :name,
                class:"bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" %>
         </div>
       </div>
-      <div class="md:flex md:items-center mb-6" data-testid="field-url">
-        <div class="md:w-1/3">
+      <div class="mb-6" data-testid="field-url">
+        <div class="">
           <%= form.label :url,
-          class: "block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" %>
+          class: "block text-gray-500 font-bold mb-1 pr-4" %>
         </div>
-        <div class="md:w-2/3">
-          <%= form.text_field :url,
-          type: "url",
-          class:"bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
-        %>
+        <div>
+          <div
+            data-controller="react"
+            data-value="<%= @team.url %>"
+            data-path="<%= is_url_unique_teams_path %>"
+            data-component="input"
+            data-type="url"
+            data-name="team[url]"
+            data-id="team_url"
+          />
         </div>
-        <div
-          data-controller="react"
-          data-value="<%= @team.url %>"
-          data-path="<%= is_url_unique_teams_path %>"
-          data-component="input"
-        />
       </div>
 
-      <div class="md:flex md:items-center">
-        <div class="md:w-1/3"></div>
-        <div class="md:w-2/3">
+      <div>
+        <div class="mt-8">
           <%= form.submit "Add", class:"shadow bg-purple-500 hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" %>
         </div>
       </div>
